<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ca.bc.gov.nrs.wfone</groupId>
	<artifactId>wfone-notifications-api-parent</artifactId>
	<name>wfone-notifications-api-parent</name>
	<version>1.3.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<parent>
		<groupId>ca.bc.gov.nrs.wfnews</groupId>
		<artifactId>wfnews</artifactId>
		<version>1.0</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>
	<properties>
		<dollar>$</dollar>
		<jetty.version>11.0.20</jetty.version>
	</properties>
	<modules>
		<module>wfone-notifications-model</module>
		<module>wfone-notifications-service-api</module>
		<module>wfone-notifications-api-rest-client</module>
		<module>wfone-notifications-api-rest-common</module>
		<module>wfone-notifications-api-rest-endpoints</module>
		<module>wfone-notifications-api-rest-integration-test</module>
		<module>wfone-notifications-api-rest-ear</module>
		<module>wfone-notifications-persistence</module>
    	<module>wfone-notifications-quartz-scheduler</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-bom</artifactId>
				<version>${jetty.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>3.4.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jersey</groupId>
				<artifactId>jersey-bom</artifactId>
				<version>3.1.5</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-jaxrs2-jakarta</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.ws.rs</groupId>
				<artifactId>jakarta.ws.rs-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>3.0.4</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>3.5.16</version>
			</dependency>
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>2.1.1</version>
			</dependency>
			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta.persistence-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>jakarta.transaction</groupId>
				<artifactId>jakarta.transaction-api</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>jakarta.ejb</groupId>
				<artifactId>jakarta.ejb-api</artifactId>
				<version>4.0.1</version>
			</dependency>
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>jakarta.mail</groupId>
				<artifactId>jakarta.mail-api</artifactId>
				<version>2.1.3</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.angus</groupId>
				<artifactId>angus-mail</artifactId>
				<version>2.0.3</version>
			</dependency>
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>4.0.5</version>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>6.1.0</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.32</version>
			</dependency>

			<dependency>
				<groupId>ca.bc.gov.webade</groupId>
				<artifactId>webade-spring-bootstrap-support</artifactId>
				<version>1.1.0.0</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.10.0</version>
			</dependency>



			<dependency>
				<groupId>com.oracle.weblogic</groupId>
				<artifactId>ojdbc7</artifactId>
				<version>12.1.3-0-0</version>
			</dependency>

			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-model</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-rest-common</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-rest-client</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-persistence</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-utils</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-service-api</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-webade</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-webade-oauth2</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-webade-oauth2-test</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-rest-endpoints</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.bc.gov.nrs.wfone.common</groupId>
				<artifactId>wfone-common-checkhealth</artifactId>
				<version>${wfone.common.version}</version>
			</dependency>

			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.5.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-dbcp2</artifactId>
				<version>2.7.0</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>5.11.4</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.11.4</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.36</version>
			</dependency>
		    <dependency>
		        <groupId>org.slf4j</groupId>
		        <artifactId>slf4j-simple</artifactId>
		        <version>1.7.36</version>
		    </dependency>
		     <dependency>
		        <groupId>org.apache.logging.log4j</groupId>
		        <artifactId>log4j-slf4j-impl</artifactId>
		        <version>${log4j.version}</version>
		    </dependency>
		    <dependency>
		        <groupId>org.apache.logging.log4j</groupId>
		        <artifactId>log4j-api</artifactId>
		        <version>${log4j.version}</version>
		    </dependency>
		    <dependency>
		        <groupId>org.apache.logging.log4j</groupId>
		        <artifactId>log4j-core</artifactId>
		        <version>${log4j.version}</version>
		    </dependency>

      		<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>2.3.2</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.quartzdesk/quartzdesk-agent -->
			<dependency>
				<groupId>com.quartzdesk</groupId>
				<artifactId>quartzdesk-api</artifactId>
				<version>4.0.1</version>
			</dependency>

			<!-- Jetty -->
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-annotations</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-webapp</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-jndi</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-plus</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-jsp</artifactId>
				<version>9.3.0.M1</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>test</scope>
			</dependency>
            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>5.4.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>1.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.mercateo</groupId>
                <artifactId>test-clock</artifactId>
                <version>1.0.2</version>
                <scope>test</scope>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
